# pokeemerald-rs

./: Makefile  README.md
include/: global.h
rust/: Cargo.toml  build.rs  rust.mk
rust/.cargo/: config.toml
rust/bindings/: Cargo.toml  build.rs
rust/bindings/src/: charmap.rs  data.rs  future.rs  graphics.rs  lib.rs  resources.rs  slice_write.rs  wrapper.h
rust/include/: rust_exports.h
rust/src/: charmap.rs  input.rs  lib.rs  party_screen.rs  slice_write.rs  wrapper.h
rust/src/party_screen/: data.rs  graphics.rs
src/: decompress.c  intro.c  new_game.c  pokemon.c  start_menu.c  trainer_pokemon_sprites.c  window.c
src/data/pokemon/: species_info.h
