[package]
name = "pokeemerald-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bindings = { path = "bindings" , features = ["debug"]}
derive_more = { version = "2.0.1", default-features = false, features = [
    "try_from",
] }

[lib]
crate-type = ["staticlib"]


[workspace]
members = ["bindings"]
